fixed social media links alignment on smaller viewport

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -39,3 +39,7 @@ body {
 .card-title {
     font-family: 'IM Fell DW Pica SC', serif;
 }
+
+#links {
+    align: center
+}
